--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp": "^3.9.1",
     "method-override": "^3.0.0",
     "mongoose": "^4.9.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {
     "del": "^3.0.0",
