--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.15.3",
     "gulp": "^3.9.1",
     "method-override": "^3.0.0",
     "mongoose": "^4.9.9",
